カラースキーマを変更

--- a/styles/ArticleList.module.css
+++ b/styles/ArticleList.module.css
@@ -1,9 +1,9 @@
 .articleListItem {
-  @apply border-light border-b-2 mt-4 first:mt-0;
+  @apply border-alto border-b-2 mt-4 first:mt-0;
 }
 
 .articleListLink {
-  @apply pb-8 block hover:opacity-70 delay-75 transition-opacity;
+  @apply pb-8 block hover:text-primary delay-75 transition-colors;
 }
 
 .articleListTitle {
